--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,4 +10,19 @@
     display: flex;
     justify-content: space-between;
     font-weight: bold;
+
+    button {
+        border: none;
+        background: transparent;
+        color: black;
+        
+        
+        
+    }
+
+    .active {
+        color: gold;
+    }
+    
+   
 }
